--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -10,7 +10,7 @@
         android:id="@+id/tv_main"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Calculadora de IMC por: InsertarNombre"
+        android:text="Calculadora de IMC por: Ernesto Daniel Tafoya Molina"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/edt_userWeight"
         app:layout_constraintEnd_toEndOf="parent"
