--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,8 @@
 
     <TextView
         android:id="@+id/tv_main"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="336dp"
+        android:layout_height="58dp"
         android:text="Calculadora de IMC por: Ernesto Daniel Tafoya Molina"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -21,58 +21,65 @@
 
     <EditText
         android:id="@+id/edt_userWeight"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="44dp"
+        android:layout_width="309dp"
+        android:layout_height="50dp"
         android:hint="Ingrese su peso (kg):"
-        app:layout_constraintBottom_toTopOf="@+id/edt_userHeight"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.067"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.271" />
 
     <EditText
         android:id="@+id/edt_userHeight"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="309dp"
+        android:layout_height="50dp"
         android:hint="Ingrese su altura (m):"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.068"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.348" />
+        app:layout_constraintVertical_bias="0.35" />
+
+    <EditText
+        android:id="@+id/edt_userName"
+        android:layout_width="309dp"
+        android:layout_height="50dp"
+        android:hint="Ingrese su nombre:"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.187" />
 
     <TextView
         android:id="@+id/tv_userIMC"
-        android:layout_width="97dp"
-        android:layout_height="31dp"
-        android:layout_marginBottom="52dp"
+        android:layout_width="316dp"
+        android:layout_height="41dp"
         android:hint="su IMC es: "
         android:textAlignment="center"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/tv_userCategory"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.994" />
+        app:layout_constraintVertical_bias="0.463" />
 
     <TextView
         android:id="@+id/tv_userCategory"
-        android:layout_width="205dp"
-        android:layout_height="65dp"
-        android:layout_marginTop="400dp"
+        android:layout_width="316dp"
+        android:layout_height="96dp"
         android:hint="su categoria es:"
         android:textAlignment="center"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/btn_calculateIMC"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.458" />
+        app:layout_constraintVertical_bias="0.607" />
 
     <Button
         android:id="@+id/btn_calculateIMC"
